--- a/tesis-project/.cproject
+++ b/tesis-project/.cproject
@@ -18,13 +18,30 @@
 					<folderInfo id="merlin.toolchain.debug.1944276929." name="/" resourcePath="">
 						<toolChain id="merlin.toolchain.builder.debug.152941468" name="Merlin debug" superClass="merlin.toolchain.builder.debug">
 							<targetPlatform id="merlin.toolchain.targetPlatformDebug.927079204" isAbstract="false" name="Linux" superClass="merlin.toolchain.targetPlatformDebug" unusedChildren="linux"/>
-							<builder buildPath="${workspace_loc:/tesis-project}/Debug" id="merlin.toolchain.builder.debug.1739584550" managedBuildOn="true" name="Debug Builder.Debug" superClass="merlin.toolchain.builder.debug"/>
-							<tool id="cdt.managedbuild.tool.gnu.assembler.mingw.so.debug.1898895714" name="GCC Assembler" superClass="cdt.managedbuild.tool.gnu.assembler.mingw.so.debug"/>
+							<builder buildPath="${workspace_loc:/tesis-project}/Debug" id="merlin.toolchain.builder.debug.1739584550" keepEnvironmentInBuildfile="false" managedBuildOn="true" name="Debug Builder" superClass="merlin.toolchain.builder.debug"/>
+							<tool id="cdt.managedbuild.tool.gnu.assembler.mingw.so.debug.1898895714" name="GCC Assembler" superClass="cdt.managedbuild.tool.gnu.assembler.mingw.so.debug">
+								<inputType id="cdt.managedbuild.tool.gnu.assembler.input.929732415" superClass="cdt.managedbuild.tool.gnu.assembler.input"/>
+							</tool>
 							<tool id="cdt.managedbuild.tool.gnu.archiver.mingw.base.1638756777" name="GCC Archiver" superClass="cdt.managedbuild.tool.gnu.archiver.mingw.base"/>
-							<tool id="cdt.managedbuild.tool.gnu.cpp.compiler.mingw.so.debug.1814342617" name="GCC C++ Compiler" superClass="cdt.managedbuild.tool.gnu.cpp.compiler.mingw.so.debug"/>
-							<tool id="cdt.managedbuild.tool.gnu.c.compiler.mingw.so.debug.1560302564" name="GCC C Compiler" superClass="cdt.managedbuild.tool.gnu.c.compiler.mingw.so.debug"/>
+							<tool id="cdt.managedbuild.tool.gnu.cpp.compiler.mingw.so.debug.1814342617" name="GCC C++ Compiler" superClass="cdt.managedbuild.tool.gnu.cpp.compiler.mingw.so.debug">
+								<option id="gnu.cpp.compiler.option.include.files.1043879190" name="Include files (-include)" superClass="gnu.cpp.compiler.option.include.files" valueType="includeFiles">
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/${ProjName}/libs-src/include/bool.h}&quot;"/>
+								</option>
+								<option id="gnu.cpp.compiler.option.include.paths.132055480" superClass="gnu.cpp.compiler.option.include.paths" valueType="includePath">
+									<listOptionValue builtIn="false" value="/usr/include/gtk-2.0"/>
+								</option>
+								<inputType id="cdt.managedbuild.tool.gnu.cpp.compiler.input.1040866368" superClass="cdt.managedbuild.tool.gnu.cpp.compiler.input"/>
+							</tool>
+							<tool id="cdt.managedbuild.tool.gnu.c.compiler.mingw.so.debug.1560302564" name="GCC C Compiler" superClass="cdt.managedbuild.tool.gnu.c.compiler.mingw.so.debug">
+								<inputType id="cdt.managedbuild.tool.gnu.c.compiler.input.1870710666" superClass="cdt.managedbuild.tool.gnu.c.compiler.input"/>
+							</tool>
 							<tool id="cdt.managedbuild.tool.gnu.c.linker.mingw.so.debug.2091794103" name="MinGW C Linker" superClass="cdt.managedbuild.tool.gnu.c.linker.mingw.so.debug"/>
-							<tool id="cdt.managedbuild.tool.gnu.cpp.linker.mingw.so.debug.1446955422" name="MinGW C++ Linker" superClass="cdt.managedbuild.tool.gnu.cpp.linker.mingw.so.debug"/>
+							<tool id="cdt.managedbuild.tool.gnu.cpp.linker.mingw.so.debug.1446955422" name="MinGW C++ Linker" superClass="cdt.managedbuild.tool.gnu.cpp.linker.mingw.so.debug">
+								<inputType id="cdt.managedbuild.tool.gnu.cpp.linker.input.1052351738" superClass="cdt.managedbuild.tool.gnu.cpp.linker.input">
+									<additionalInput kind="additionalinputdependency" paths="$(USER_OBJS)"/>
+									<additionalInput kind="additionalinput" paths="$(LIBS)"/>
+								</inputType>
+							</tool>
 							<tool id="merlin.toolchain.makeAllProjectDebug.31883481" name="Tool Merlin" superClass="merlin.toolchain.makeAllProjectDebug"/>
 						</toolChain>
 					</folderInfo>
@@ -40,4 +57,5 @@
 		<autodiscovery enabled="true" problemReportingEnabled="true" selectedProfileId=""/>
 	</storageModule>
 	<storageModule moduleId="org.eclipse.cdt.core.LanguageSettingsProviders"/>
+	<storageModule moduleId="refreshScope"/>
 </cproject>
