--- a/tesis-project/.cproject
+++ b/tesis-project/.cproject
@@ -3,8 +3,8 @@
 
 <cproject storage_type_id="org.eclipse.cdt.core.XmlProjectDescriptionStorage">
 	<storageModule moduleId="org.eclipse.cdt.core.settings">
-		<cconfiguration id="merlin.toolchain.debug.1878029522">
-			<storageModule buildSystemId="org.eclipse.cdt.managedbuilder.core.configurationDataProvider" id="merlin.toolchain.debug.1878029522" moduleId="org.eclipse.cdt.core.settings" name="Debug">
+		<cconfiguration id="merlin.toolchain.debug.1925574318">
+			<storageModule buildSystemId="org.eclipse.cdt.managedbuilder.core.configurationDataProvider" id="merlin.toolchain.debug.1925574318" moduleId="org.eclipse.cdt.core.settings" name="Debug">
 				<externalSettings/>
 				<extensions>
 					<extension id="org.eclipse.cdt.core.ELF" point="org.eclipse.cdt.core.BinaryParser"/>
@@ -14,18 +14,37 @@
 				</extensions>
 			</storageModule>
 			<storageModule moduleId="cdtBuildSystem" version="4.0.0">
-				<configuration artifactName="${ProjName}" buildProperties="" description="" id="merlin.toolchain.debug.1878029522" name="Debug" parent="merlin.toolchain.debug">
-					<folderInfo id="merlin.toolchain.debug.1878029522." name="/" resourcePath="">
-						<toolChain id="merlin.toolchain.builder.debug.719370768" name="Merlin debug" superClass="merlin.toolchain.builder.debug">
-							<targetPlatform id="merlin.toolchain.targetPlatformDebug.2031018610" isAbstract="false" name="linux" superClass="merlin.toolchain.targetPlatformDebug"/>
-							<builder buildPath="${workspace_loc:/tesis-project}/Debug" id="merlin.toolchain.builder.debug.535592382" managedBuildOn="true" name="Debug Builder.Debug" superClass="merlin.toolchain.builder.debug"/>
-							<tool id="cdt.managedbuild.tool.gnu.archiver.base.1212741508" name="GCC Archiver" superClass="cdt.managedbuild.tool.gnu.archiver.base"/>
-							<tool id="cdt.managedbuild.tool.gnu.cpp.compiler.exe.debug.386441510" name="GCC C++ Compiler" superClass="cdt.managedbuild.tool.gnu.cpp.compiler.exe.debug"/>
-							<tool id="cdt.managedbuild.tool.gnu.c.compiler.exe.debug.1620088777" name="GCC C Compiler" superClass="cdt.managedbuild.tool.gnu.c.compiler.exe.debug"/>
-							<tool id="cdt.managedbuild.tool.gnu.c.linker.exe.debug.347300465" name="GCC C Linker" superClass="cdt.managedbuild.tool.gnu.c.linker.exe.debug"/>
-							<tool id="cdt.managedbuild.tool.gnu.cpp.linker.exe.debug.226976360" name="GCC C++ Linker" superClass="cdt.managedbuild.tool.gnu.cpp.linker.exe.debug"/>
-							<tool id="cdt.managedbuild.tool.gnu.assembler.exe.debug.1056021892" name="GCC Assembler" superClass="cdt.managedbuild.tool.gnu.assembler.exe.debug"/>
-							<tool id="merlin.toolchain.makeAllProjectDebug.1660836822" name="Tool Merlin Debug" superClass="merlin.toolchain.makeAllProjectDebug"/>
+				<configuration artifactName="${ProjName}" buildProperties="" description="" id="merlin.toolchain.debug.1925574318" name="Debug" parent="merlin.toolchain.debug">
+					<folderInfo id="merlin.toolchain.debug.1925574318." name="/" resourcePath="">
+						<toolChain id="merlin.toolchain.builder.debug.573802030" name="Merlin debug" superClass="merlin.toolchain.builder.debug">
+							<targetPlatform id="merlin.toolchain.targetPlatformDebug.1876326721" isAbstract="false" name="linux" superClass="merlin.toolchain.targetPlatformDebug"/>
+							<builder buildPath="${workspace_loc:/tesis-project}/Debug" id="merlin.toolchain.builder.debug.864322590" keepEnvironmentInBuildfile="false" managedBuildOn="true" name="Debug Builder" superClass="merlin.toolchain.builder.debug"/>
+							<tool id="cdt.managedbuild.tool.gnu.archiver.base.178460044" name="GCC Archiver" superClass="cdt.managedbuild.tool.gnu.archiver.base"/>
+							<tool id="cdt.managedbuild.tool.gnu.cpp.compiler.exe.debug.412265470" name="GCC C++ Compiler" superClass="cdt.managedbuild.tool.gnu.cpp.compiler.exe.debug">
+								<option id="gnu.cpp.compiler.option.include.files.136547886" name="Include files (-include)" superClass="gnu.cpp.compiler.option.include.files" valueType="includeFiles">
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/${ProjName}/libs-src/include/bool.h}&quot;"/>
+								</option>
+								<option id="gnu.cpp.compiler.option.include.paths.1855898670" name="Include paths (-I)" superClass="gnu.cpp.compiler.option.include.paths" valueType="includePath">
+									<listOptionValue builtIn="false" value="/usr/include/gtk-2.0"/>
+									<listOptionValue builtIn="false" value="/usr/include/atk-1.0"/>
+									<listOptionValue builtIn="false" value="/usr/lib/i386-linux-gnu/gtk-2.0/include"/>
+								</option>
+								<inputType id="cdt.managedbuild.tool.gnu.cpp.compiler.input.1814801190" superClass="cdt.managedbuild.tool.gnu.cpp.compiler.input"/>
+							</tool>
+							<tool id="cdt.managedbuild.tool.gnu.c.compiler.exe.debug.1615906461" name="GCC C Compiler" superClass="cdt.managedbuild.tool.gnu.c.compiler.exe.debug">
+								<inputType id="cdt.managedbuild.tool.gnu.c.compiler.input.1260043470" superClass="cdt.managedbuild.tool.gnu.c.compiler.input"/>
+							</tool>
+							<tool id="cdt.managedbuild.tool.gnu.c.linker.exe.debug.617749343" name="GCC C Linker" superClass="cdt.managedbuild.tool.gnu.c.linker.exe.debug"/>
+							<tool id="cdt.managedbuild.tool.gnu.cpp.linker.exe.debug.1911944830" name="GCC C++ Linker" superClass="cdt.managedbuild.tool.gnu.cpp.linker.exe.debug">
+								<inputType id="cdt.managedbuild.tool.gnu.cpp.linker.input.298417627" superClass="cdt.managedbuild.tool.gnu.cpp.linker.input">
+									<additionalInput kind="additionalinputdependency" paths="$(USER_OBJS)"/>
+									<additionalInput kind="additionalinput" paths="$(LIBS)"/>
+								</inputType>
+							</tool>
+							<tool id="cdt.managedbuild.tool.gnu.assembler.exe.debug.2135644204" name="GCC Assembler" superClass="cdt.managedbuild.tool.gnu.assembler.exe.debug">
+								<inputType id="cdt.managedbuild.tool.gnu.assembler.input.739819798" superClass="cdt.managedbuild.tool.gnu.assembler.input"/>
+							</tool>
+							<tool id="merlin.toolchain.makeAllProjectDebug.1492272405" name="Tool Merlin Debug" superClass="merlin.toolchain.makeAllProjectDebug"/>
 						</toolChain>
 					</folderInfo>
 				</configuration>
@@ -34,10 +53,15 @@
 		</cconfiguration>
 	</storageModule>
 	<storageModule moduleId="cdtBuildSystem" version="4.0.0">
-		<project id="tesis-project.merlin.toolchain.project.1366474708" name="Merlin Project" projectType="merlin.toolchain.project"/>
+		<project id="tesis-project.merlin.toolchain.project.649098772" name="Merlin Project" projectType="merlin.toolchain.project"/>
 	</storageModule>
 	<storageModule moduleId="scannerConfiguration">
 		<autodiscovery enabled="true" problemReportingEnabled="true" selectedProfileId=""/>
 	</storageModule>
 	<storageModule moduleId="org.eclipse.cdt.core.LanguageSettingsProviders"/>
+	<storageModule moduleId="refreshScope" versionNumber="2">
+		<configuration configurationName="Debug">
+			<resource resourceType="PROJECT" workspacePath="/tesis-project"/>
+		</configuration>
+	</storageModule>
 </cproject>
