--- a/tesis-project/.cproject
+++ b/tesis-project/.cproject
@@ -26,8 +26,15 @@
 								</option>
 								<option id="gnu.cpp.compiler.option.include.paths.1855898670" name="Include paths (-I)" superClass="gnu.cpp.compiler.option.include.paths" valueType="includePath">
 									<listOptionValue builtIn="false" value="/usr/include/gtk-2.0"/>
+									<listOptionValue builtIn="false" value="/usr/include/cairo"/>
+									<listOptionValue builtIn="false" value="/usr/include/pango-1.0"/>
+									<listOptionValue builtIn="false" value="/usr/include/glib-2.0"/>
+									<listOptionValue builtIn="false" value="/usr/include/gdk-pixbuf-2.0"/>
+									<listOptionValue builtIn="false" value="/usr/include/gtkglext-1.0"/>
+									<listOptionValue builtIn="false" value="/usr/lib/gtkglext-1.0/include"/>
 									<listOptionValue builtIn="false" value="/usr/include/atk-1.0"/>
 									<listOptionValue builtIn="false" value="/usr/lib/i386-linux-gnu/gtk-2.0/include"/>
+									<listOptionValue builtIn="false" value="/usr/lib/i386-linux-gnu/glib-2.0/include"/>
 								</option>
 								<option id="gnu.cpp.compiler.option.preprocessor.def.1868288593" name="Defined symbols (-D)" superClass="gnu.cpp.compiler.option.preprocessor.def" valueType="definedSymbols">
 									<listOptionValue builtIn="false" value="&quot;DELETE_OBJECT(x, type) =((void)((type *) *x == *x), memory_integrity_pointer_to_destroy((void **)x), delete *x, memory_crush_pointer((void **)x))&quot;"/>
@@ -52,6 +59,12 @@
 									<listOptionValue builtIn="false" value="&quot;ASSIGN_PP(ptr, x)=((void)(*ptr == (x *)*ptr), (x *)memory_assign_double_pointer((void **)ptr))&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;REALLOC(ptr,n,x)=((void)(*ptr == (x)*ptr), memory_realloc((void **)ptr,n,sizeof(x)))&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;CALLOC(n,x)=(x *)memory_calloc(n,sizeof(x))&quot;"/>
+								</option>
+								<option id="gnu.c.compiler.option.include.paths.1089200316" name="Include paths (-I)" superClass="gnu.c.compiler.option.include.paths" valueType="includePath">
+									<listOptionValue builtIn="false" value="/usr/include/gtk-2.0/gdk"/>
+									<listOptionValue builtIn="false" value="/usr/include/gtk-2.0"/>
+									<listOptionValue builtIn="false" value="/usr/include/gdk-pixbuf-2.0"/>
+									<listOptionValue builtIn="false" value="/usr/include/gtkglext-1.0"/>
 								</option>
 								<inputType id="cdt.managedbuild.tool.gnu.c.compiler.input.1260043470" superClass="cdt.managedbuild.tool.gnu.c.compiler.input"/>
 							</tool>
